src/snapshots/hugr_qir__lower_ssa_vars__test__lowered_qubit_selects_and_phis@multiple_qubit_phis_in_block.snap
---
source: src/lower_ssa_vars.rs
expression: "normalized_module_ir_for_snapshot(&module, fixture)"
---
; ModuleID = '<fixture:multiple_qubit_phis_in_block>'
source_filename = "multiple_qubit_phis_in_block"
target datalayout = "<normalized>"
target triple = "<normalized>"

define void @__hugr__.main.1(i1 %cond) {
entry:
  br i1 %cond, label %merge.dup1, label %merge.dup

common.ret:                                       ; preds = %merge.dup, %merge.dup1
  ret void

merge.dup1:                                       ; preds = %entry
  call void @__quantum__qis__reset__body(ptr null)
  call void @__quantum__qis__reset__body(ptr inttoptr (i64 2 to ptr))
  br label %common.ret

merge.dup:                                        ; preds = %entry
  call void @__quantum__qis__reset__body(ptr inttoptr (i64 1 to ptr))
  call void @__quantum__qis__reset__body(ptr inttoptr (i64 3 to ptr))
  br label %common.ret
}

declare void @__quantum__qis__reset__body(ptr)
