src/snapshots/hugr_qir__lower_ssa_vars__test__lowered_qubit_selects_and_phis@select_with_downstream_phi.snap
---
source: src/lower_ssa_vars.rs
expression: "normalized_module_ir_for_snapshot(&module, fixture)"
---
; ModuleID = '<fixture:select_with_downstream_phi>'
source_filename = "select_with_downstream_phi"
target datalayout = "<normalized>"
target triple = "<normalized>"

define void @__hugr__.main.1(i1 %cond0, i1 %cond1) {
entry:
  br i1 %cond0, label %entry.dup1, label %entry.dup

entry.dup1:                                       ; preds = %entry
  br i1 %cond1, label %merge.dup3, label %merge.dup4

common.ret:                                       ; preds = %merge.dup4, %merge.dup, %merge.dup3
  ret void

merge.dup3:                                       ; preds = %entry.dup1
  call void @__quantum__qis__reset__body(ptr null)
  br label %common.ret

entry.dup:                                        ; preds = %entry
  br i1 %cond1, label %merge.dup, label %merge.dup4

merge.dup:                                        ; preds = %entry.dup
  call void @__quantum__qis__reset__body(ptr inttoptr (i64 1 to ptr))
  br label %common.ret

merge.dup4:                                       ; preds = %entry.dup, %entry.dup1
  call void @__quantum__qis__reset__body(ptr inttoptr (i64 2 to ptr))
  br label %common.ret
}

declare void @__quantum__qis__reset__body(ptr)
