src/snapshots/hugr_qir__lower_ssa_vars__test__lowered_qubit_selects_and_phis@simple_qubit_phi.snap
---
source: src/lower_ssa_vars.rs
expression: "normalized_module_ir_for_snapshot(&module, fixture)"
---
; ModuleID = '<fixture:simple_qubit_phi>'
source_filename = "simple_qubit_phi"
target datalayout = "<normalized>"
target triple = "<normalized>"

define void @__hugr__.main.1(i1 %cond) {
entry:
  br i1 %cond, label %merge.dup, label %merge.dup1

common.ret:                                       ; preds = %merge.dup1, %merge.dup
  ret void

merge.dup:                                        ; preds = %entry
  call void @__quantum__qis__reset__body(ptr null)
  br label %common.ret

merge.dup1:                                       ; preds = %entry
  call void @__quantum__qis__reset__body(ptr inttoptr (i64 1 to ptr))
  br label %common.ret
}

declare void @__quantum__qis__reset__body(ptr)
