src/snapshots/hugr_qir__lower_ssa_vars__test__lowered_qubit_selects_and_phis@tail_float_casts_and_cmp.snap
---
source: src/lower_ssa_vars.rs
expression: "normalized_module_ir_for_snapshot(&module, fixture)"
---
; ModuleID = '<fixture:tail_float_casts_and_cmp>'
source_filename = "tail_float_casts_and_cmp"
target datalayout = "<normalized>"
target triple = "<normalized>"

define void @__hugr__.main.1(i1 %cond, i1 %flag) {
entry:
  br i1 %cond, label %entry.dup, label %entry.dup11

entry.dup:                                        ; preds = %entry
  call void @__quantum__qis__reset__body(ptr null)
  br label %common.ret

common.ret:                                       ; preds = %entry.dup11, %entry.dup
  ret void

entry.dup11:                                      ; preds = %entry
  call void @__quantum__qis__reset__body(ptr inttoptr (i64 3 to ptr))
  br label %common.ret
}

declare void @__quantum__qis__reset__body(ptr)
