src/snapshots/hugr_qir__lower_ssa_vars__test__lowered_qubit_selects_and_phis@tail_int_ptr_casts.snap
---
source: src/lower_ssa_vars.rs
expression: "normalized_module_ir_for_snapshot(&module, fixture)"
---
; ModuleID = '<fixture:tail_int_ptr_casts>'
source_filename = "tail_int_ptr_casts"
target datalayout = "<normalized>"
target triple = "<normalized>"

%Qubit = type opaque

define void @__hugr__.main.1(i1 %cond, i1 %flag) {
entry:
  br i1 %cond, label %entry.dup, label %entry.dup12

common.ret:                                       ; preds = %entry.dup12, %entry.dup
  ret void

entry.dup:                                        ; preds = %entry
  %flag.ext27 = zext i1 %flag to i64
  %shifted38 = shl i64 %flag.ext27, 1
  %mixed49 = or i64 0, %shifted38
  %next510 = add i64 %mixed49, 1
  %selected.next611 = inttoptr i64 %next510 to %Qubit*
  call void @__quantum__qis__reset__body(%Qubit* %selected.next611)
  br label %common.ret

entry.dup12:                                      ; preds = %entry
  %flag.ext213 = zext i1 %flag to i64
  %shifted314 = shl i64 %flag.ext213, 1
  %mixed415 = or i64 8, %shifted314
  %next516 = add i64 %mixed415, 1
  %selected.next617 = inttoptr i64 %next516 to %Qubit*
  call void @__quantum__qis__reset__body(%Qubit* %selected.next617)
  br label %common.ret
}

declare void @__quantum__qis__reset__body(%Qubit*)
