src/snapshots/hugr_qir__lower_ssa_vars__test__lowered_qubit_selects_and_phis@tail_record_output_and_downstream_phi.snap
---
source: src/lower_ssa_vars.rs
expression: "normalized_module_ir_for_snapshot(&module, fixture)"
---
; ModuleID = '<fixture:tail_record_output_and_downstream_phi>'
source_filename = "tail_record_output_and_downstream_phi"
target datalayout = "<normalized>"
target triple = "<normalized>"

@0 = private unnamed_addr constant [8 x i8] c"first\00\00\00", align 1

define void @__hugr__.main.1(i1 %cond0, i1 %cond1) {
entry:
  br i1 %cond0, label %entry.dup3, label %entry.dup

entry.dup3:                                       ; preds = %entry
  %flag14 = call i1 @__quantum__qis__read_result__body(ptr null)
  call void @__quantum__qis__reset__body(ptr null)
  br i1 %cond1, label %join, label %right

entry.dup:                                        ; preds = %entry
  %flag12 = call i1 @__quantum__qis__read_result__body(ptr null)
  call void @__quantum__qis__reset__body(ptr inttoptr (i64 6 to ptr))
  br i1 %cond1, label %join, label %right

right:                                            ; preds = %entry.dup3, %entry.dup
  %phi.calluser.edge7 = phi i1 [ %flag12, %entry.dup ], [ %flag14, %entry.dup3 ]
  br label %join

join:                                             ; preds = %entry.dup, %entry.dup3, %right
  %phi.calluser.edge6 = phi i1 [ %phi.calluser.edge7, %right ], [ %flag12, %entry.dup ], [ %flag14, %entry.dup3 ]
  %phi.calluser = phi i1 [ true, %right ], [ %flag12, %entry.dup ], [ %flag14, %entry.dup3 ]
  tail call void @__test__consume_bool(i1 %phi.calluser)
  br label %__prepare_module_record_output_final

__prepare_module_record_output_final:             ; preds = %join
  call void @__quantum__rt__bool_record_output(i1 %phi.calluser.edge6, ptr @0)
  ret void
}

declare i1 @__quantum__qis__read_result__body(ptr)

declare void @__quantum__rt__bool_record_output(i1, ptr)

declare void @__quantum__qis__reset__body(ptr)

declare void @__test__consume_bool(i1)
